--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "start": "vite",
-    "build": "vite build --output public",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "browserslist": {
